<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/signup_documentNumber" />
    <EditText
        android:id="@+id/txtClientDocumentNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/signup_name" />
    <EditText
        android:id="@+id/txtClientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/signup_emailAddress" />
    <EditText
        android:id="@+id/txtClientEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/signup_password" />
    <EditText
        android:id="@+id/txtClientPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/signup_address" />
    <EditText
        android:id="@+id/txtClientAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/signup_phoneNumber" />
    <EditText
        android:id="@+id/txtClientPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"/>

    <Button
        android:id="@+id/btnClientRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_register"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_privacy"/>

</LinearLayout>