<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="165dp"
            android:layout_height="174dp"
            android:layout_marginBottom="50px"
            app:srcCompat="@drawable/logindraw"
            tools:srcCompat="@drawable/logindraw" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50px"
            android:text="@string/login_tittle"
            android:textSize="50px"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtLoginDocumentNumber"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_hintDocumentNumber" />

        <EditText
            android:id="@+id/txtLoginPassword"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50px"
            android:inputType="textPassword"
            android:hint="@string/login_hintPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/login_login" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/login_signup" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>