<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:background="@drawable/corners">


    <ImageView
        android:id="@+id/viewItemPhoto"
        android:layout_width="280dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10px" />

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_race"
                android:textSize="30px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_gender"
                android:textSize="30px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_color"
                android:textSize="30px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_years"
                android:textSize="30px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_owner"
                android:textSize="30px"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/viewItemRace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30px" />

            <TextView
                android:id="@+id/viewItemGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30px" />

            <TextView
                android:id="@+id/viewItemColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30px" />

            <TextView
                android:id="@+id/viewItemYears"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30px" />

            <TextView
                android:id="@+id/viewItemOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30px" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnItemContact"
                android:layout_width="match_parent"
                android:layout_height="100px"
                android:background="@color/yellow"
                android:backgroundTint="@color/yellow"
                android:text="@string/item_contact"
                android:textSize="30px" />

            <Button
                android:id="@+id/btnItemMaps"
                android:layout_width="match_parent"
                android:layout_height="100px"
                android:background="@color/yellow"
                android:backgroundTint="@color/yellow"
                android:text="@string/item_map"
                android:textSize="30px" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>